  EntityEditPanel and EntityEditView now set default values in constructor by calling editModel.setEntity(null)
  ObservableEntityList.hasSelectionModelBeenSet() added, used in FXEntityListModel
  CompletionDocument bug fixed, hitBackspace was not reset during remove()
  Copyright updated
  EntityEditPanel and EntityEditView no longer set default values in constructor by calling editModel.setEntity(null), wrong place, wrong time since it resets the EditModel entity state
  DefaultEntityModel now calls editModel.setEntity(null) in constructor
  EntityConditions.getInList() bug fixed, 'not in' did not work when the condition value count exceeded the in clause limit
  FilteredTablePanel.performSearch() now clears the selection when search string is not found
  ProgressWorker and ProgressDialog added
  ProgressWorker and ProgressDialog improved, UiUtil.runWithProgressBar() refactored
  ProgressWorker typo fixed
  Configuration.CLIENT_DOMAIN_MODEL_CLASS added
  DefaultEntityApplicationModel.loadDomainModel() default implementation added based on the above
0.10.9
  Server refactoring 1st stage
  Server refactoring 2nd stage
  AbstractEntityConnectionServer now calls bindToRegistry() on creation
  Custom server demo added
  Server refactoring continued
  AbstractEntityConnectionServer renamed back to DefaulEntityConnectionServer
  SwingFilteredComboBoxModel bug fixed, setSelectedItem() fired selection changed event even though the selected item didn't actually change, test updated
  SwingFilteredComboBoxModel bug fixed, filterContents() did not assume the contents of the selected item could have change during setContents(), test updated
  Sonar run
  DefaultEntityConnectionServer.getClients() bug fixed, returned a non-serializable collection
  DefaultEntityConnectionServerTest improved, now uses remote interfaces for testing, for catching bugs like the one above
  Some minor javadoc fixes
  EntityApplicationPanel.getUser() added