@@ -152,5 +152,7 @@ public final class ConditionsTest {
     public String getDescription() {return null;}
     @Override
     public Class<?> getTypeClass() {return null;}
+    @Override
+    public void validateType(final Object value) {}
   };
 }
