@@ -326,5 +326,7 @@ public class DefaultValueMapTest {
     public String getDescription() {return null;}
     @Override
     public Class<?> getTypeClass() {return null;}
+    @Override
+    public void validateType(final Object value) {}
   }
 }
